--- a/index.html
+++ b/index.html
@@ -17,32 +17,12 @@
       <!-- title -->
       <div class="title">
         <h2>Our Menu</h2>
-        <div class="underline">
-        </div>
+        <div class="underline"></div>
       </div>
       <!-- filter buttons -->
-      <div class="btn-container">
-        <!-- <button class="filter-btn" type="button" data-id="all">All</button>
-        <button class="filter-btn" type="button" data-id="breakfast">Breakfast</button>
-        <button class="filter-btn" type="button" data-id="lunch">Lunch</button>
-        <button class="filter-btn" type="button" data-id="shakes">Shakes</button> -->
-      </div>
+      <div class="btn-container"></div>
       <!-- menu items -->
-      <div class="section-center">
-      <!-- single item -->
-      <!-- <article class="menu-item">
-        <img src="menu-item.jpeg" class="photo">
-        <div class="item-info">
-          <header>
-          <h4>Buttermilk Pancakes</h4>
-          <h4 class="price">$15</h4>
-        </header>
-        <p class="item=text">
-          Tasty pancakes!
-        </p>
-        </div>
-      </article> -->
-      </div>
+      <div class="section-center"></div>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
